src/objects/Item__c.object
<CustomObject>
    <description>Keeps record of items in the inventory</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Categories for the items</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Gadgets</fullName>
                </value>
                <value>
                    <fullName>Toys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Items_Purchased__c</fullName>
        <description>Items purchased that were added into the inventory</description>
        <label>Items Purchased</label>
        <summarizedField>Items_Purchased__c.Quantity__c</summarizedField>
        <summaryForeignKey>Items_Purchased__c.Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Dispatched__c</fullName>
        <label>Quantity Dispatched</label>
        <summarizedField>Place_Order__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Place_Order__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Returned</value>
        </summaryFilterItems>
        <summaryForeignKey>Place_Order__c.Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Stock_Remaining__c</fullName>
        <description>The remaining stock for the inventory</description>
        <formula>Items_Purchased__c -  Quantity_Dispatched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stock Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <description>Depending picklist for the Category field</description>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Men</fullName>
                </value>
                <value>
                    <fullName>Women</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
                <value>
                    <fullName>DSLR</fullName>
                </value>
                <value>
                    <fullName>Sunglasses</fullName>
                </value>
                <value>
                    <fullName>Trousers</fullName>
                </value>
                <value>
                    <fullName>Denims</fullName>
                </value>
                <value>
                    <fullName>E-books</fullName>
                </value>
                <value>
                    <fullName>Textbooks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>